The last update with documentation

--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 
-    <script src="{{ url_for('static', filename='js/bootstrap.css') }}"></script>
+    <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha384-XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX" crossorigin="anonymous"></script>
