--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,11 @@
     <p class="lead">Soy un apasionado del desarrollo web y me especializo en HTML, CSS y JavaScript. Con más de X años de experiencia, he trabajado en proyectos desafiantes y me encanta aprender nuevas tecnologías. Estoy comprometido a crear experiencias web atractivas y funcionales para mis clientes.</p>
   </section>
 
+<form action="/guardar_datos" method="post">
+    <!-- Resto del formulario... -->
+</form>
+
+
 <div class="container">
     <div class="row">
         <div class="col-md-4">
