--- a/templates/contact.html
+++ b/templates/contact.html
@@ -10,10 +10,7 @@
     <div class="row">
         <div class="col-md-6">
             <p>
-                Aquí crearé mi formulario.
-                <div class="container mt-5"></div>
-            <hr/>
-                <form>
+                <form action="/guardar_datos" method="post">
                     <div class="form-group">
                         <label for="caja1">Subject:</label>
                         <input type="text" class="form-control" id="caja1" placeholder="Ingrese texto">
@@ -24,7 +21,7 @@
                     </div>
                     <div class="form-group">
                         <label for="mensaje">Mensaje:</label>
-                        <textarea class="form-control" id="mensaje" rows="4"></textarea>
+                        <textarea placeholder="Escriba su mensaje" class="form-control" id="mensaje" rows="4"></textarea>
                     </div>
                     <button type="button" class="btn btn-primary" onclick="obtenerDatos()">Enviar</button>
                 </form>
