--- a/templates/contact.html
+++ b/templates/contact.html
@@ -13,34 +13,23 @@
                 <form action="/guardar_datos" method="post">
                     <div class="form-group">
                         <label for="caja1">Subject:</label>
-                        <input type="text" class="form-control" id="caja1" placeholder="Ingrese texto">
+                        <input type="text" class="form-control" name="subject" id="subject" placeholder="Ingrese texto">
                     </div>
                     <div class="form-group">
                         <label for="caja2">Email address:</label>
-                        <input type="text" class="form-control" id="caja2" placeholder="Ingrese texto">
+                        <input type="text" class="form-control" name="email" id="email" placeholder="Ingrese texto">
                     </div>
                     <div class="form-group">
                         <label for="mensaje">Mensaje:</label>
-                        <textarea placeholder="Escriba su mensaje" class="form-control" id="mensaje" rows="4"></textarea>
+                        <textarea placeholder="Escriba su mensaje" class="form-control" name="message" id="message" rows="4"></textarea>
                     </div>
-                    <button type="button" class="btn btn-primary" onclick="obtenerDatos()">Enviar</button>
+                    <input type="submit" value="Enviar mensaje">
                 </form>
                 </div>
             </p>
         </div>
     </div>
 </div>
-
-<script>
-    function obtenerDatos() {
-        var caja1Valor = document.getElementById("caja1").value;
-        var caja2Valor = document.getElementById("caja2").value;
-
-        alert("El valor de la Caja 1 es: " + caja1Valor + "\nEl valor de la Caja 2 es: " + caja2Valor);
-    }
-
-    
-</script>
 
 
 {% endblock %}
